--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@ title: CaseSimple.com
         </div>
       </div>
       <div class="item">
-        <img data-src="holder.js/900x500/auto/#666:#6a6a6a/text:Second slide" alt="Second slide">
+        <img src="http://farm6.staticflickr.com/5332/8991995911_a3ef9d1898_h.jpg" alt="BIG Jambox Case" />
         <div class="container">
           <div class="carousel-caption">
-            <h1>Another example headline.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
+            <h1>BIG Jambox Case</h1>
+            <p>Now your BIG Jambox can go anyhere. Strap it to your bike or your bag for big tunes everywhere.</p>
             <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
           </div>
         </div>
@@ -60,22 +60,19 @@ title: CaseSimple.com
     <!-- Three columns of text below the carousel -->
     <div class="row">
       <div class="col-lg-4">
-        <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-        <h2>Heading</h2>
-        <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <img class="img-circle" src="http://dghmedia.files.wordpress.com/2013/05/made-in-the-usa.png" alt="Made In The USA" width="140" />
+        <h2>Made In The USA</h2>
+        <p>Our products are thoughtfully designed in Des Moines, Iowa and manufactured in Chicago, Illnois. They are shipped all over the country by Amazon Fulfillment Centers.</p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-        <h2>Heading</h2>
+        <h2>High Quality</h2>
         <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
       <div class="col-lg-4">
         <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-        <h2>Heading</h2>
+        <h2>Versatile</h2>
         <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
       </div><!-- /.col-lg-4 -->
     </div><!-- /.row -->
 
