--- a/index.html
+++ b/index.html
@@ -30,17 +30,17 @@ title: CaseSimple.com
           <div class="carousel-caption">
             <h1>BIG Jambox Case</h1>
             <p>Now your BIG Jambox can go anyhere. Strap it to your bike or your bag for big tunes everywhere.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Learn more</a></p>
+            <p><a class="btn btn-lg btn-primary" href="http://amzn.to/bigjamboxcase" role="button">Go BIG</a></p>
           </div>
         </div>
       </div>
       <div class="item">
-        <img data-src="holder.js/900x500/auto/#555:#5a5a5a/text:Third slide" alt="Third slide">
+        <img src="http://farm6.staticflickr.com/5484/9613271032_9d9251442e_h.jpg" alt="U-Lock Holster">
         <div class="container">
           <div class="carousel-caption">
-            <h1>One more for good measure.</h1>
-            <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi porta gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.</p>
-            <p><a class="btn btn-lg btn-primary" href="#" role="button">Browse gallery</a></p>
+            <h1>U-Lock Holster</h1>
+            <p>Your bike lock's new best friend.</p>
+            <p><a class="btn btn-lg btn-primary" href="http://amzn.to/ulockcase" role="button">Check it out</a></p>
           </div>
         </div>
       </div>
