--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@ title: CaseSimple.com
         </div>
       </div>
       <div class="item">
-        <img src="http://farm6.staticflickr.com/5484/9613271032_9d9251442e_h.jpg" alt="U-Lock Holster">
+        <img src="http://farm8.staticflickr.com/7437/9606674529_dffd31dc1d_b.jpg" alt="U-Lock Holster">
         <div class="container">
           <div class="carousel-caption">
             <h1>U-Lock Holster</h1>
@@ -57,61 +57,105 @@ title: CaseSimple.com
 
   <div class="container marketing">
 
-    <!-- Three columns of text below the carousel -->
-    <div class="row">
-      <div class="col-lg-4">
-        <img class="img-circle" src="http://dghmedia.files.wordpress.com/2013/05/made-in-the-usa.png" alt="Made In The USA" width="140" />
-        <h2>Made In The USA</h2>
-        <p>Our products are thoughtfully designed in Des Moines, Iowa and manufactured in Chicago, Illnois. They are shipped all over the country by Amazon Fulfillment Centers.</p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-        <h2>High Quality</h2>
-        <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
-      </div><!-- /.col-lg-4 -->
-      <div class="col-lg-4">
-        <img class="img-circle" data-src="holder.js/140x140" alt="Generic placeholder image">
-        <h2>Versatile</h2>
-        <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-      </div><!-- /.col-lg-4 -->
-    </div><!-- /.row -->
-
-
-    <!-- START THE FEATURETTES -->
-
-    <hr class="featurette-divider">
-
-    <div class="row featurette">
+    <div id="mini-jambox-case" class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">First featurette heading. <span class="text-muted">It'll blow your mind.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">MINI Jambox Case. <span class="text-muted">It'll blow your mind.</span></h2>
+        <p class="lead">Take your MINI Jambox on all your adventures with our stylish and versatile case. Easy access to all the MINI Jambox buttons and ports less you use your MINI Jambox on the go - while strapped to your bike or bag.</p>
+        <ul>
+          <li>Take your MINI Jambox Everywhere</li>
+          <li>Mounts to your bike, backpack, cooler, scooter or dog</li>
+          <li>High quality nylon, velcro, and mesh</li>
+          <li>Convenient D-Ring to use with a carabiner</li>
+          <li><strong>Free Shipping</strong></li>
+          <li><strong>Made in the USA</strong></li>
+        </ul><br/>
+        <a href="http://amzn.to/mini-jambox-case" title="MINI Jambox Case" class="btn btn-primary btn-lg">Get Yours Now</a>
       </div>
       <div class="col-md-5">
-        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <img class="featurette-image img-responsive" src="http://farm8.staticflickr.com/7383/9896955653_89b069e8c4_c.jpg" alt="MINI Jambox Bike Mount">
       </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div id="big-jambox-case" class="row featurette">
       <div class="col-md-5">
-        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <img class="featurette-image img-responsive" src="http://farm3.staticflickr.com/2893/8993197132_17a59b0f7c_c.jpg" alt="BIG Jambox Case">
       </div>
       <div class="col-md-7">
-        <h2 class="featurette-heading">Oh yeah, it's that good. <span class="text-muted">See for yourself.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">BIG Jambox Case. <span class="text-muted">Take the party anywhere.</span></h2>
+        <p class="lead">Our BIG Jambox case is perfect for taking this massive bluetooth speaker out to play. With our case, you can strap you BIG Jambox to your bike, bag, tent, or boat to pack a punch on any excursion you may be on.</p>
+        <ul>
+          <li>Take your BIG Jambox Anywhere</li>
+          <li>Mounts to your bike, scooter, motorcycle or boat</li>
+          <li>High quality nylon, velcro, and mesh</li>
+          <li>Secure clips keep your BIG Jambox in place</li>
+          <li><strong>Free Shipping</strong></li>
+          <li><strong>Made in the USA</strong></li>
+        </ul><br/>
+        <a href="http://amzn.to/mini-jambox-case" title="Buy BIG Jambox Case" class="btn btn-primary btn-lg">Buy Now</a>
       </div>
     </div>
 
     <hr class="featurette-divider">
 
-    <div class="row featurette">
+    <div id="jambox-case" class="row featurette">
       <div class="col-md-7">
-        <h2 class="featurette-heading">And lastly, this one. <span class="text-muted">Checkmate.</span></h2>
-        <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+        <h2 class="featurette-heading">Jambox Case. <span class="text-muted">The OG.</span></h2>
+        <p class="lead">The original inspiration and our top seller - the Jambox Case. Take that versatile little bluetooth speaker on your next century ride or to the beach strapped to your cooler.</p>
+        <ul>
+          <li>Jambox. Everywhere.</li>
+          <li>Mounts to your bike, bag, cooler, or scooter</li>
+          <li>High quality nylon, velcro, and mesh</li>
+          <li><strong>Free Shipping</strong></li>
+          <li><strong>Made in Chicago</strong></li>
+        </ul><br/>
+        <a href="http://amzn.to/jamboxcase" title="Buy Jambox Case" class="btn btn-primary btn-lg">Buy Now</a>
       </div>
       <div class="col-md-5">
-        <img class="featurette-image img-responsive" data-src="holder.js/500x500/auto" alt="Generic placeholder image">
+        <img class="featurette-image img-responsive" src="http://farm3.staticflickr.com/2818/9273265008_17aa7205b1_o.jpg" alt="Jambox Case">
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div id="ulock-holster" class="row featurette">
+      <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="http://farm3.staticflickr.com/2821/9609886530_5fd0501c2d_c.jpg" alt="U-Lock Holster">
+      </div>
+      <div class="col-md-7">
+        <h2 class="featurette-heading">U-Lock Holster. <span class="text-muted">Your Bike Lock's Best Friend.</span></h2>
+        <p class="lead">The CaseSimple U-Lock holster was designed to help you carry around that pesky U-Lock - that one you can never finda good spot to put. Now you can strap it to your bike, bag or rack.</p>
+        <ul>
+          <li>Fits popular U-Locks like Kryptonite and Avenir</li>
+          <li>Mounts to your bike, rack or bag</li>
+          <li>High quality nylon, velcro, and mesh</li>
+          <li>Convenient D-Ring to attach keys so you don't lose them again</li>
+          <li><strong>Free Shipping</strong></li>
+          <li><strong>Made in the USA</strong></li>
+        </ul><br/>
+        <a href="http://amzn.to/ulockcase" title="Buy U-Lock Holster" class="btn btn-primary btn-lg">Get One</a>
+      </div>
+    </div>
+
+    <hr class="featurette-divider">
+
+    <div id="logitech-ue-case" class="row featurette">
+      <div class="col-md-7">
+        <h2 class="featurette-heading">Logitech UE Case. <span class="text-muted">The other guy</span></h2>
+        <p class="lead">Not everyone out there has a Jambox, so we made a case for another great speaker - the Logitech UE Boombox.</p>
+        <ul>
+          <li>Take the Logitech UE Boombox everywhere</li>
+          <li>Mounts to your scooter, bike, tent, and boat</li>
+          <li>High quality nylon, velcro, and mesh</li>
+          <li>Easy access to speaker controls</li>
+          <li><strong>Free Shipping</strong></li>
+          <li><strong>Made in the USA</strong></li>
+        </ul><br/>
+        <a href="http://amzn.to/logitechuecase" title="Buy Logitech UE Case" class="btn btn-primary btn-lg">Buy Now</a>
+      </div>
+      <div class="col-md-5">
+        <img class="featurette-image img-responsive" src="http://farm6.staticflickr.com/5531/9306209769_3d68484b15_z.jpg" alt="Logitech UE Case">
       </div>
     </div>
 
