--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: CaseSimple.com
+title: CaseSimple - We make the Jambox Cases and Mobile Bluetooth Speaker Cases
 ---
 
 <div id="home">
